removed old vertical alignement fixes for checkboxes/radios

--- a/assets/less/front.less
+++ b/assets/less/front.less
@@ -42,8 +42,6 @@ input, button, select, textarea {
     color: inherit;
 }
 
-input[type=checkbox] { vertical-align: -2px; }
-input[type=radio] { vertical-align: -3px; }
 input, textarea { .placeholder(); }
 textarea { .resizable(none); }
 textarea, sup, sub { vertical-align: baseline; }
